[package]
name = "scores"
version = "0.1.0"
authors = ["David Graham <david.malcom.graham@gmail.com>"]
description = "String similarity ranking for Vim's CtrlP fuzzy file finder."
repository = "https://github.com/dgraham/scores"
license = "MIT"
edition = "2021"

[dependencies]
getopts = "0.2.21"
regex = "1.11.1"

[profile.release]
strip = true
panic = "abort"
